# geoalembic.tpl

./: .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b5e0204b601b_init.py
src/packagename/model/: __init__.py  projects.py
