[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "packagename"
description = "Testing alembic for migrations"
dynamic = ["version", "dependencies"]
requires-python = ">= 3.12"
authors = [
  {name = "Trygvi Bech Árting", email = "trygvi@barting.xyz"},
]
maintainers = [
  {name = "Trygvi Bech Árting", email = "trygvi@barting.xyz"},
]
readme = {file = "README.md", content-type = "text/markdown"}


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.scripts]
arara = "packagename.__main__:main"

